sort.basic.bubble.AlgBubbleSort2.scala.error
Compilation error:
AlgBubbleSort2:4: error: Unmatched closing brace '}' ignored here
    for (j <- 0 to getValueCount()-2-i)}
                                       ^AlgBubbleSort2:12: error: Unmatched closing brace '}' ignored here
}
^